--- a/Lab05/bio05.html
+++ b/Lab05/bio05.html
@@ -24,7 +24,10 @@ Outside of academics, enjoys cooking, following baseball and football, exercisin
     <li> SQL </li>
     <li> HTML </li>
 </ul>
-&copy; &#50; &#48; &#50; &#53;<hr>
+<br>
+<br>
+<img src = "../Images/lab05_final.png">
+&copy; &#50; &#48; &#50; &#53;<br>
 </body>
 </html>
 
