--- a/Lab06/bio06.html
+++ b/Lab06/bio06.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sam McCain - Bio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="lab06styles.css">
 </head>
 
 <body>
