bio image location change

--- a/Lab06/bio06.html
+++ b/Lab06/bio06.html
@@ -7,6 +7,8 @@
     <title>Sam McCain - Bio</title>
     <link rel="stylesheet" href="lab06styles.css">
 </head>
+<header><img src="../Images/lab05_final.png" alt="Sam McCain Bio Image">
+</header>
 
 <body>
 <h1>Sam McCain's Biography</h1>
@@ -27,7 +29,7 @@
     </ul>
 
     <br><br>
-    <img src="../Images/lab05_final.png" alt="Sam McCain Bio Image"><br>
+    
     &copy; 2025<br>
 </body>
 </html>
