--- a/Lab07/bio07.html
+++ b/Lab07/bio07.html
@@ -7,7 +7,7 @@
     <title>Sam McCain - Bio</title>
     <link rel="stylesheet" href="lab07styles.css">
 </head>
-
+<header><img src="../Images/lab05_final.png" alt="Sam McCain Bio Image"></header>
 <body>
     <nav>
         <a href="bio07.html">Home</a> |
@@ -32,7 +32,6 @@
     </ul>
 
     <br><br>
-    <img src="../Images/lab05_final.png" alt="Sam McCain Bio Image"><br>
     &copy; 2025<br>
 </body>
 </html>
