--- a/Lab08/bio08.html
+++ b/Lab08/bio08.html
@@ -9,9 +9,8 @@
 
 <body>
     <header>
-        <img src="../Images/lab05_final.png" alt="Sam McCain Bio Image">
+        <img src="../Images/lab05_final.png" alt="Sam McCain Bio Image" class="banner">
     </header>
-
 
     <nav>
         <a href="bio08.html">Home</a> |
@@ -40,7 +39,9 @@
 
     <footer>
         <hr>
-        &copy; 2025 Sam McCain
+        <p class="copyright">&copy; 2025 Sam McCain</p>
+        <p class="tagline">“Code is like humor. When you have to explain it, it’s bad.” – Cory House</p>
     </footer>
 </body>
+
 </html>
