--- a/Lab10/bio10.html
+++ b/Lab10/bio10.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sam McCain - Bio</title>
     <link rel="stylesheet" href="lab08styles.css">
 </head>
@@ -13,9 +14,9 @@
     </header>
 
     <nav>
-        <a href="bio08.html">Home</a> |
-        <a href="skills08.html">Skills</a> |
-        <a href="contact08.html">Contact</a>
+        <a href="bio10.html">Home</a> |
+        <a href="skills10.html">Skills</a> |
+        <a href="contact10.html">Contact</a>
     </nav>
 
     <main>
