--- a/Lab10/bio10.html
+++ b/Lab10/bio10.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sam McCain - Bio</title>
     <link rel="stylesheet" href="bio10styles.css">
+    <style>
+        .imgclass {max-width: 100%;}
+    </style>
 </head>
 
 <body>
     <header>
-        <img src="../Images/lab05_final.png" alt="Sam McCain Bio Image" class="banner">
+        <img class="imgclass" src="../Images/lab05_final.png" alt="Sam McCain Bio Image" class="banner">
     </header>
 
     <nav>
