--- a/Lab10/bio10.html
+++ b/Lab10/bio10.html
@@ -17,8 +17,8 @@
     </header>
 
     <nav>
-        <a href="bio10.html">Home</a> |
-        <a href="skills10.html">Skills</a> |
+        <a href="bio10.html">Home</a><span>|</span>
+        <a href="skills10.html">Skills</a><span>|</span>
         <a href="contact10.html">Contact</a>
     </nav>
 
