banner class change

--- a/Lab10/bio10.html
+++ b/Lab10/bio10.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img class="imgclass" src="../Images/lab05_final.png" alt="Sam McCain Bio Image" class="banner">
+        <img class="banner" src="../Images/lab05_final.png" alt="Sam McCain Bio Image">
     </header>
 
     <nav>
