lab13 initial changes

--- a/Lab13/bio13.html
+++ b/Lab13/bio13.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <a href="#main" class="skip-link">Skip to main content</a>
     <header>
         <img class="banner" src="../Images/lab05_final.png" alt="Sam McCain Bio Image">
     </header>
@@ -22,7 +23,7 @@
         <a href="contact13.html">Contact</a>
     </nav>
 
-    <main>
+    <main id="main">
         <h1>Sam McCain's Biography</h1>
 
         <h2>Personal Info</h2>
