--- a/Lab13/bio13.html
+++ b/Lab13/bio13.html
@@ -7,8 +7,13 @@
     <title>Sam McCain - Bio</title>
     <link rel="stylesheet" href="bio13styles.css">
     <style>
-        .imgclass {max-width: 100%;}
+        .imgclass {
+            max-width: 100%;
+        }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,9 +33,12 @@
 
         <h2>Personal Info</h2>
         <p>
-            Sam McCain is a Senior at Syracuse University majoring in Applied Data Analytics with a concentration in Cybersecurity. 
-            Sam creates <strong>machine learning models</strong> that examine trends in public health data, and predict the outcome of sports games in <strong>Python and R</strong>. 
-            Outside of academics, Sam enjoys cooking, following baseball and football, exercising regularly, and playing Mario Kart.
+            Sam McCain is a Senior at Syracuse University majoring in Applied Data Analytics with a concentration in
+            Cybersecurity.
+            Sam creates <strong>machine learning models</strong> that examine trends in public health data, and predict
+            the outcome of sports games in <strong>Python and R</strong>.
+            Outside of academics, Sam enjoys cooking, following baseball and football, exercising regularly, and playing
+            Mario Kart.
         </p>
 
         <h2>Coding Languages</h2>
